# nekte

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  eslint.config.js  package.json  pnpm-lock.yaml
.changeset/: config.json  v030-release.md
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
benchmarks/market-mcps/: index.ts  renderer.ts
benchmarks/market-mcps/protocols/: index.ts
benchmarks/real-mcp/: renderer.ts  runner.ts
benchmarks/results/: BENCHMARK_RESULTS.md  market-mcp-1775632706710.json
benchmarks/src/: cli.ts
demo/two-agents/: run.ts
docs/: GETTING_STARTED.md  PLAN_PYTHON_SDK.md  PROTOCOL_FLOWS.md  SPEC.md
docs/internal/: PLAN_DOCS_SITE.md
sdk/python/: README.md  pyproject.toml
sdk/python/src/nekte/: __init__.py
sdk/python/src/nekte/adapters/: __init__.py  http_transport.py  memory_cache_store.py
sdk/python/src/nekte/application/: __init__.py  client.py  server.py
sdk/python/src/nekte/domain/: __init__.py  budget.py  errors.py  hash.py  sse.py  task.py  types.py
sdk/python/src/nekte/ports/: __init__.py  auth.py  cache_store.py  transport.py
sdk/python/tests/conformance/: test_hash_conformance.py
sdk/python/tests/domain/: test_budget.py  test_cache_store.py  test_hash.py  test_server.py  test_sse.py  test_task.py  test_types.py
website/: astro.config.mjs  package.json
website/.astro/: content-modules.mjs
(+218 files in other folders)
