[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nekte"
version = "0.3.0"
description = "NEKTE Protocol SDK — Token-efficient agent-to-agent coordination"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "NEKTE Protocol", email = "dev@nekte.dev" }]
keywords = ["agent", "a2a", "protocol", "llm", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "anyio>=4.4",
]

[project.optional-dependencies]
grpc = ["grpcio>=1.64", "grpcio-tools>=1.64"]
server = ["starlette>=0.37", "uvicorn>=0.30"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
    "coverage>=7.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nekte"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]
